<resources>
    <string name="app_name">Nnews</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">STORY</string>

    <string name="sync_account_type">android.rj.com</string>
    <string name="content_authority">com.rj.android.nnews</string>

    <string name="pref_last_notification">last_notification</string>

    <string name="url">Saved_url</string>
    <string name="keySaved">keySaved</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noi">NO. OF NEWS FEED IN THE LIST</string>
    <string name="noi_default">15</string>
    <string name="noi_title">News Feed Size</string>
    <string name="notific">Notification</string>
    <string name="notific_on">Enabled</string>
    <string name="notific_off">Not Enabled</string>
    <string name="noi_key">noi</string>
    <string name="key_notific">key_notific</string>
    <string name="transition_image">transition</string>
    <string name="no_network">No News Information Available .\n\nNetwork is not Available is to fetch the News.</string>
    <string name="no_info_available">Loading Please Wait..</string>
    <string name="action_share">Share</string>
    <string name="dialog_message">Do you want Cache ?</string>
    <string name="dialog_title">Erase Cache ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
